Experimenting with compiling LLVM IR to an android app

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
-project(android_elp C CXX)
+project(android_elp)
 cmake_minimum_required(VERSION 3.22)
 
-add_library(hello_world SHARED build/intermediates/llvm/hello_world.o)
+add_library(hello_world SHARED build/intermediates/llvm/dummy.cpp build/intermediates/llvm/hello_world.o)
 target_link_libraries(hello_world android)
